<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
      <artifactId>engine-parent</artifactId>
      <groupId>io.lumeer</groupId>
      <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>

   <artifactId>lumeer-core</artifactId>
   <name>Lumeer Core</name>

   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>21</maven.compiler.source>
      <maven.compiler.target>21</maven.compiler.target>
      <kotlin.version>1.9.20</kotlin.version>
      <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
      <kotlin.compiler.jvmTarget>21</kotlin.compiler.jvmTarget>
   </properties>

   <dependencies>
      <dependency>
         <groupId>io.lumeer</groupId>
         <artifactId>lumeer-storage-api</artifactId>
      </dependency>
      <dependency>
         <groupId>io.lumeer</groupId>
         <artifactId>lumeer-storage-mongodb</artifactId>
         <scope>runtime</scope>
      </dependency>

      <dependency>
         <groupId>jakarta.enterprise</groupId>
         <artifactId>jakarta.enterprise.cdi-api</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>jakarta.annotation</groupId>
         <artifactId>jakarta.annotation-api</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>jakarta.ejb</groupId>
         <artifactId>jakarta.ejb-api</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>com.fasterxml.jackson.module</groupId>
         <artifactId>jackson-module-jaxb-annotations</artifactId>
      </dependency>
      <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
      </dependency>
      <dependency>
         <groupId>com.fasterxml.jackson.datatype</groupId>
         <artifactId>jackson-datatype-jsr310</artifactId>
      </dependency>
      <dependency>
         <groupId>jakarta.ws.rs</groupId>
         <artifactId>jakarta.ws.rs-api</artifactId>
         <scope>provided</scope>
      </dependency>

      <dependency>
         <groupId>jakarta.servlet</groupId>
         <artifactId>jakarta.servlet-api</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>jakarta.enterprise.concurrent</groupId>
         <artifactId>jakarta.enterprise.concurrent-api</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>jakarta.mail</groupId>
         <artifactId>jakarta.mail-api</artifactId>
         <scope>provided</scope>
      </dependency>

      <dependency>
         <groupId>org.mongodb</groupId>
         <artifactId>mongodb-driver-sync</artifactId>
      </dependency>

      <dependency>
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>s3</artifactId>
      </dependency>
      <dependency>
         <groupId>org.apache.httpcomponents.client5</groupId>
         <artifactId>httpclient5</artifactId>
      </dependency>
      <dependency>
         <groupId>org.apache.httpcomponents.core5</groupId>
         <artifactId>httpcore5</artifactId>
      </dependency>

      <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
      </dependency>
      <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
      </dependency>
      <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-collections4</artifactId>
      </dependency>

      <dependency>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-stdlib</artifactId>
      </dependency>

      <!-- Testing -->
      <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-agent</artifactId>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>com.univocity</groupId>
         <artifactId>univocity-parsers</artifactId>
      </dependency>
      <dependency>
         <groupId>cz.gopay</groupId>
         <artifactId>gp-java-api-v3-common</artifactId>
         <version>3.8.1</version>
      </dependency>
      <dependency>
         <groupId>cz.gopay</groupId>
         <artifactId>gp-java-api-v3-apache-http-client</artifactId>
         <version>3.8.1</version>
         <exclusions>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-jaxrs</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-client</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-jaxb-provider</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-jackson-provider</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-multipart-provider</artifactId>
            </exclusion>
         </exclusions>
      </dependency>

      <dependency>
         <groupId>com.auth0</groupId>
         <artifactId>mvc-auth-commons</artifactId>
      </dependency>
      <dependency>
         <groupId>com.auth0</groupId>
         <artifactId>java-jwt</artifactId>
      </dependency>
      <dependency>
         <groupId>com.googlecode.json-simple</groupId>
         <artifactId>json-simple</artifactId>
      </dependency>
      <dependency>
         <groupId>org.marvec</groupId>
         <artifactId>pusher</artifactId>
      </dependency>
      <dependency>
         <groupId>io.sentry</groupId>
         <artifactId>sentry</artifactId>
      </dependency>

      <dependency>
         <groupId>org.graalvm.sdk</groupId>
         <artifactId>graal-sdk</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.graalvm.sdk</groupId>
         <artifactId>polyglot-tck</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.graalvm.truffle</groupId>
         <artifactId>truffle-api</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.graalvm.js</groupId>
         <artifactId>js</artifactId>
         <scope>provided</scope>
      </dependency>

      <dependency>
         <groupId>com.floreysoft</groupId>
         <artifactId>jmte</artifactId>
      </dependency>

      <dependency>
         <groupId>com.itextpdf</groupId>
         <artifactId>kernel</artifactId>
      </dependency>
      <dependency>
         <groupId>com.itextpdf</groupId>
         <artifactId>html2pdf</artifactId>
      </dependency>

      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
         <scope>test</scope>
      </dependency>

   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-maven-plugin</artifactId>
            <version>${kotlin.version}</version>
            <executions>
               <execution>
                  <id>compile</id>
                  <goals>
                     <goal>compile</goal>
                  </goals>
                  <configuration>
                     <sourceDirs>
                        <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
                        <sourceDir>${project.basedir}/src/main/java</sourceDir>
                     </sourceDirs>
                  </configuration>
               </execution>
               <execution>
                  <id>test-compile</id>
                  <goals>
                     <goal>test-compile</goal>
                  </goals>
                  <configuration>
                     <sourceDirs>
                        <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
                        <sourceDir>${project.basedir}/src/test/java</sourceDir>
                     </sourceDirs>
                  </configuration>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${maven.compiler.plugin.version}</version>
            <configuration>
               <source>${maven.compiler.source}</source>
               <target>${maven.compiler.target}</target>
            </configuration>
            <executions>
               <!-- Replacing default-compile as it is treated specially by maven -->
               <execution>
                  <id>default-compile</id>
                  <phase>none</phase>
               </execution>
               <!-- Replacing default-testCompile as it is treated specially by maven -->
               <execution>
                  <id>default-testCompile</id>
                  <phase>none</phase>
               </execution>
               <execution>
                  <id>java-compile</id>
                  <phase>compile</phase>
                  <goals>
                     <goal>compile</goal>
                  </goals>
               </execution>
               <execution>
                  <id>java-test-compile</id>
                  <phase>test-compile</phase>
                  <goals>
                     <goal>testCompile</goal>
                  </goals>
                  <configuration>
                     <skip>${maven.test.skip}</skip>
                  </configuration>
               </execution>
            </executions>
         </plugin>

      </plugins>
   </build>


</project>
